crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_system_apos1_apos1_0.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa SYSTEM''0\"####)"
---
[
    Token {
        data: "DOCTYPEa SYSTEM''0",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
